# Sol-Aud.io

./: .gitignore  Cargo.toml  README.md
sol-record/: Cargo.toml
sol-record-player/: .gitignore  Cargo.toml
sol-record-player/src/: audio.rs  main.rs  utils.rs
sol-record/src/: entrypoint.rs  lib.rs
