[package]
name = "sol-record-player"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sol-record-player"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = {version = "4.5.49", features = ["derive"]}
dirs = "6.0.0"
futures = "0.3.31"
hex = "0.4.3"
hound = "3.5.1"
indicatif = "0.18.0"
rodio = {version = "0.21.1", features = ["symphonia-all"]}
sha2 = "0.10.9"
solana-client = "3.0.7"
solana-commitment-config = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.7"
symphonia = {version = "0.5.5", features = ["aac", "flac", "mp3", "vorbis", "wav"] }
tokio = {version =  "1.48.0", features = ["full"]}
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.20", features = ["fmt", "env-filter"]}
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.3.0"
